<resources>
    <string name="app_name">Aisha Chef</string>
    <string name="no_connection">Check your Internet connection</string>
    <string name="error">something wrong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone number</string>
    <string name="forget">Forget</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create a new account</string>
    <string name="full_name">Full name in english</string>
    <string name="full_name_arabic">Full name in arabic</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="accept_term_conditions"><![CDATA[I agree to the following Terms & Conditions]]></string>
    <string name="already_have_account">"I Already Have An Account "</string>
    <string name="next">Next</string>
    <string name="upload_some_files">Upload some files</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="your_id">Your ID</string>
    <string name="bank_name_in_arabic">Bank name in Arabic</string>
    <string name="bank_name_in_english">Bank name in English</string>
    <string name="iban">IBAN</string>
    <string name="your_location">Your location</string>
    <string name="your_address">Your address</string>
    <string name="areas_serve">"Areas you serve in "</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub category</string>
    <string name="payment">Payment</string>
    <string name="transfer_to">Transfer to</string>
    <string name="bank">Bank</string>
    <string name="account_number">Account number</string>
    <string name="account">Account</string>
    <string name="transfer_from">Transfer from</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="confirm">Confirm</string>
    <string name="account_name">Account name</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_string">Please enter your Phone number.  To receive a code to create a new password</string>
    <string name="send_code">Send code</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="verify_string">Enter your OTP code here</string>
    <string name="resend_string">resend a new code in</string>
    <string name="refresh_password">"type your new password "</string>
    <string name="refresh">Refresh</string>
    <string name="pay_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="categories">Categories</string>
    <string name="add_something">Add something</string>
    <string name="an_offer">An Offer</string>
    <string name="today_dish">Today\'s Dish</string>
    <string name="reservations">Reservations</string>
    <string name="choose_working_days">Choose working days</string>
    <string name="notification">Notifications</string>
    <string name="waiting">Please, Waiting</string>
    <string name="select_camera">Camera</string>
    <string name="select_album">Album</string>
    <string name="offer">Offers</string>
    <string name="on_waiting_list">The offer on waiting list</string>
    <string name="accept">Accept</string>
    <string name="available">Available</string>
    <string name="add_offer">Add Offer</string>
    <string name="offer_title">Offer title in english</string>
    <string name="offer_photo">Offer photo</string>
    <string name="offer_title_in_arabic">Offer title in arabic</string>
    <string name="offer_price">Offer price / AED</string>
    <string name="preparing_within">Preparing within / hrs</string>
    <string name="offer_details">Offer details in english</string>
    <string name="offer_details_in_arabic">Offer details in arabic</string>
    <string name="publish">Publish</string>
    <string name="current_balance">Current balance</string>
    <string name="claim">Claim</string>
    <string name="quantity">Quantity</string>
    <string name="my_proportion">My proportion</string>
    <string name="app_proportion">App proportion</string>
    <string name="transfer_status">Transfer status</string>
    <string name="amount">Amount</string>
    <string name="claim_status">Claim status</string>
    <string name="meal_title">Meal title in english</string>
    <string name="meal_title_in_arabic">Meal title in arabic</string>
    <string name="meal_price">Meal price / AED</string>
    <string name="meal_details">Meal details in english</string>
    <string name="meal_details_in_arabic">Meal details in arabic</string>
    <string name="extra_editing">Extra editing</string>
    <string name="extra_title">Extra title in english</string>
    <string name="extra_title_in_arabic">Extra title in arabic</string>
    <string name="extra_price">Extra price / AED</string>
    <string name="add_extra">Add extra</string>
    <string name="meal_for">Meal for</string>
    <string name="add">Add</string>
    <string name="price">Price / AED</string>
    <string name="number_of_people">Number of people</string>
    <string name="items">Items</string>
    <string name="add_item">Add Item</string>
    <string name="meal_photo">Meal photos</string>
    <string name="delivery_rate">Delivery rates</string>
    <string name="rating">Rating</string>
    <string name="renew_subscription">Renew subscription</string>
    <string name="privacy">Privacy policy</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="select">Select</string>
    <string name="subscribe">"Subscribe "</string>
    <string name="choose_your_plan">Choose a plan</string>
    <string name="send_message">Send a message</string>
    <string name="subject">Subject</string>
    <string name="type_message">Type your message</string>
    <string name="send">Send</string>
    <string name="edit_profile">Edit profile</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="reviews">Reviews</string>
    <string name="cooking_license">Cooking license</string>
    <string name="category_limit">You can only choose 4 categories</string>
    <string name="save_photo">Photo saved</string>
    <string name="save_location">Location saved</string>
    <string name="save">Save</string>
    <string name="sub_total">Sub total</string>
    <string name="delivery">Delivery</string>
    <string name="taxes">Taxes</string>
    <string name="total">Total</string>
    <string name="order_items">Ordered items</string>
    <string name="qnt">Qnt.</string>
    <string name="delivery_time">Delivery time</string>
    <string name="order_place">Order Placed</string>
    <string name="preparing">Preparing / hrs</string>
    <string name="order_ready">Set Order Ready</string>
    <string name="on_way">On it’s way</string>
    <string name="delivered">Delivered</string>
    <string name="ready">Ready</string>
    <string name="your_message">Your message...</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="arabic" translatable="false">اللغة العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="change_Language">Change Language</string>
    <string name="your_reservation">Choose your reservation plan</string>
    <string name="in_the_same_day">in the same day</string>
    <string name="before_day">Before day</string>
    <string name="error_in_process_the_photo">Error happened in the processing the photo</string>
    <string name="error_in_input">Error in the input, try again</string>
    <string name="get_data">Get data from server</string>
    <string name="required_field">required field</string>
    <string name="email_valid">Not validate email</string>
    <string name="not_match">Password not match password confirm</string>
    <string name="check_internet">"Check your internet connection "</string>
    <string name="nine_digits">must be 9 digits</string>
    <string name="must_accept_terms"><![CDATA[You must accept the terms & conditions]]></string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denial">Permission denial</string>
    <string name="select_avatar">Select your avatar</string>
    <string name="find_your_location">Find your location</string>
    <string name="move_pin_select_address">Move the map pin and select delivery address</string>
    <string name="conform">Conform</string>
    <string name="turn_on_location_services">Turn on location services</string>
    <string name="location_services_needed">Location Services Needed</string>
    <string name="location_services_denial">The app needs location services to find out where you currently are.</string>
    <string name="location_services_confirm">Turn on location services</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_needed">Location Permission Needed</string>
    <string name="location_permission_denial">The app needs permission to access your current location.</string>
    <string name="give_location_permission">Give us location permission</string>
    <string name="auto_location_fail">We couldn\'t get your current location.Please try again or reset location services.</string>
    <string name="required_photo">All images is required</string>
    <string name="required_cities">Must select some cities</string>
    <string name="required_main_categories">Must select some main categories</string>
    <string name="four_main_categories">You can select at most 4 main categories</string>
    <string name="required_sub_categories">Must select some sub categories</string>
    <string name="sec">sec</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="select_payment_type">Select your payment type</string>
    <string name="update_offer_status">Update offer status</string>
    <string name="select_photo_meal">Select meal photo</string>
    <string name="not_available">Unavailable</string>
    <string name="update_meal">Update meal</string>
    <string name="store_meal">Storing meal</string>
    <string name="select_type_reservation">Select type of reservation</string>
    <string name="select_location">Select your location</string>
    <string name="audio_deleted">Audio deleted</string>
    <string name="select_image">Select Image</string>
    <string name="order_on_way">Set Order on way</string>
    <string name="order_accept">Accept Order</string>
    <string name="finished">Finished</string>
    <string name="processing">Processing</string>
    <string name="receivable">Receivable</string>
    <string name="required_price_field">Price field is required</string>
    <string name="select_days">Select some days</string>
    <string name="upload_text">Upload text</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="within">" Within "</string>
    <string name="fill_extra">Fill previous extra</string>
    <string name="fill_people">Fill previous meal for</string>
    <string name="hrs">" hrs "</string>
    <string name="edit_meal">Edit meal</string>
    <string name="add_delivery_time">Add delivery time</string>
</resources>