<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/medium_padding"
    android:paddingEnd="@dimen/medium_padding"
    tools:context="com.webapp.aisha.feture.main.schedule.ScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text"
            android:padding="@dimen/small_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_working_days"
            android:textSize="@dimen/small_text"
            android:layout_marginBottom="@dimen/medium_margin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:nestedScrollingEnabled="false"
            android:id="@+id/rv_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/yellow_button"
            android:backgroundTint="@color/colorPrimaryDark"
            android:foreground="?selectableItemBackground"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>